--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body {
   background-color: white;
   overflow-x: hidden;
   font-family: 'Lato', sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 #container {
@@ -29,8 +31,18 @@ nav {
 }
 
 nav .join {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #1A0D76;
   border-radius: 2em;
+  width: 3.5vw;
 }
 
 #logo {
@@ -103,9 +115,9 @@ nav ul li {
 
 nav a {
   display: block;
-  padding: 0 20px;
+  padding: 0 2vw;
   color: white;
-  font-size: 20px;
+  font-size: 1.2rem;
   line-height: 60px;
   text-decoration: none;
 }
@@ -113,6 +125,10 @@ nav a {
 .join:hover {
   background-color: black;
   color: white;
+}
+
+nav ul li ul li {
+  background-color: #518BBB;
 }
 
 nav ul li ul li:hover {
@@ -131,6 +147,10 @@ nav ul ul {
 
 nav ul li:hover > ul {
   display: inherit;
+}
+
+nav ul li:hover > nav ul {
+  background-color: #1A0D76;
 }
 
 nav ul ul li {
@@ -164,48 +184,11 @@ li > a:only-child:after {
   height: 100vh;
 }
 
-.homepage .ribbon {
-  z-index: 4;
-  position: absolute;
-  width: 100%;
-  top: 25em;
-}
-
-.homepage .ribbon .red-vector {
-  position: absolute;
-  top: 10em;
-  width: 100%;
-  background-color: #FF001E;
-  height: 70vh;
-  -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-}
-
-.homepage .ribbon .navyblue-vector {
-  position: absolute;
-  top: 12em;
-  width: 100%;
-  background-color: #1A0D76;
-  height: 70vh;
-  -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-}
-
-.homepage .ribbon .skyblue-vector {
-  position: absolute;
-  top: 14em;
-  width: 100%;
-  background-color: #518BBB;
-  height: 70vh;
-  -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-}
-
 .homepage .hero {
   position: absolute;
   width: 65vw;
   right: 0em;
-  top: -10em;
+  top: -10vw;
   z-index: 2;
 }
 
@@ -226,20 +209,21 @@ li > a:only-child:after {
 
 .homepage .hero-text {
   position: absolute;
-  top: 30%;
-  left: 5%;
+  top: 25%;
+  left: 3%;
   line-height: 1.5em;
+  z-index: 5;
 }
 
 .homepage .hero-text h1 {
   font-weight: 900;
-  font-size: 3rem;
+  font-size: 3.3vw;
   color: #1A0D76;
 }
 
 .homepage .hero-text h3 {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.9vw;
 }
 
 .homepage .hero-text .join-cta {
@@ -257,13 +241,172 @@ li > a:only-child:after {
       -ms-flex-pack: center;
           justify-content: center;
   font-weight: bold;
+  font-size: 1.7vw;
   color: white;
-  font-size: 1.5rem;
+  text-decoration: none;
+}
+
+.aboutpage {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  height: 100vh;
+  top: 35vw;
+}
+
+.aboutpage .ribbon {
+  z-index: 4;
+  position: absolute;
+  width: 100vw;
+  top: -10vw;
+  height: 100%;
+}
+
+.aboutpage .ribbon .red-vector {
+  position: absolute;
+  top: 10em;
+  width: 100%;
+  background-color: #FF001E;
+  height: 70vh;
+  -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+          clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+}
+
+.aboutpage .ribbon .navyblue-vector {
+  position: absolute;
+  top: 12em;
+  width: 100%;
+  background-color: #1A0D76;
+  height: 70vh;
+  -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+          clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+}
+
+.aboutpage .ribbon .skyblue-vector {
+  position: absolute;
+  top: 14em;
+  width: 100%;
+  background-color: #518BBB;
+  height: 70vh;
+  -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+          clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+}
+
+.aboutpage .about-main-content {
+  z-index: 5;
+  background-color: #518BBB;
+  position: relative;
+  top: 15em;
+  height: 150vh;
+}
+
+.aboutpage .about-main-content .about-ncc {
+  position: relative;
+  top: 0em;
+}
+
+.aboutpage .about-main-content .about-ncc h1 {
+  font-size: 3vw;
+  color: white;
+  font-weight: 800;
+  position: relative;
+  left: 20vw;
+}
+
+.aboutpage .about-main-content .about-ncc h3 {
+  position: relative;
+  color: #1A0D76;
+  font-size: 2.2vw;
+  width: 65%;
+  left: 21vw;
+}
+
+.aboutpage .about-main-content .about-bnmit-ncc {
+  position: relative;
+  top: 3em;
+}
+
+.aboutpage .about-main-content .about-bnmit-ncc img {
+  width: 100%;
+}
+
+.aboutpage .about-main-content .about-bnmit-ncc h1 {
+  font-size: 3vw;
+  color: white;
+  font-weight: 800;
+  position: relative;
+  left: 15vw;
+}
+
+.aboutpage .about-main-content .about-bnmit-ncc h3 {
+  position: relative;
+  color: #1A0D76;
+  font-size: 2.2vw;
+  width: 65%;
+  left: 16vw;
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-250px * 7));
+            transform: translateX(calc(-250px * 7));
+  }
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-250px * 7));
+            transform: translateX(calc(-250px * 7));
+  }
+}
+
+.aboutpage .about-main-content .slider {
+  height: 112px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  z-index: 6;
+}
+
+.aboutpage .about-main-content .slider::after {
+  right: 0;
+  top: 0;
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
+}
+
+.aboutpage .about-main-content .slider::before {
+  left: 0;
+  top: 0;
+}
+
+.aboutpage .about-main-content .slider .slide-track {
+  -webkit-animation: scroll 20s linear infinite;
+          animation: scroll 20s linear infinite;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc(250px * 14);
+}
+
+.aboutpage .about-main-content .slider .slide {
+  padding: 2em;
+  height: 112px;
+  width: 200px;
 }
 
 /* Media Queries
   --------------------------------------------- */
-@media all and (max-width: 768px) {
+@media all and (max-width: 915px) {
   #logo {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -277,6 +420,9 @@ li > a:only-child:after {
             justify-content: left;
     -webkit-transform: scale(0.8) translateX(-3em);
             transform: scale(0.8) translateX(-3em);
+  }
+  nav a {
+    font-size: 20px;
   }
   .about {
     color: white;
@@ -353,46 +499,30 @@ li > a:only-child:after {
     width: 100%;
   }
   .homepage .hero {
-    top: -7em;
+    top: -22vw;
     width: 100%;
   }
   .homepage .orange-background {
     width: 100%;
     left: 0;
   }
-  .homepage .ribbon {
-    top: 5em;
-  }
-  .homepage .ribbon .navyblue-vector {
-    top: 11em;
-  }
-  .homepage .ribbon .skyblue-vector {
-    top: 12em;
-  }
   .homepage .hero-text {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: auto auto;
-        grid-template-columns: auto auto;
-    -ms-grid-rows: auto auto;
-        grid-template-rows: auto auto;
-    gap: 1em;
     top: -10em;
-    row-gap: 0;
-    line-height: auto;
   }
   .homepage .hero-text h1 {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    grid-column-end: 3;
-    font-size: 2.5rem;
+    font-size: 1.8rem;
   }
   .homepage .hero-text h3 {
-    margin: auto;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
   .homepage .hero-text .join-cta {
-    font-size: 1.1rem;
+    font-size: 1rem;
+  }
+  .aboutpage {
+    top: 85vw;
+  }
+  .aboutpage .ribbon {
+    height: 20vw;
   }
 }
 
