--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 @charset "UTF-8";
 body {
-  margin: 0;
+  margin: 0em;
   padding: 0;
   background-color: white;
   overflow-x: hidden;
-  font-family: "Lato", sans-serif;
-  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100vw;
 }
 
 #container {
@@ -28,45 +30,68 @@ nav {
   font-weight: bold;
   margin-top: 1em;
 }
+
 nav .join {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #1A0D76;
   border-radius: 2em;
   width: 3.5vw;
 }
 
 #logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   float: left;
   line-height: 60px;
   gap: 0.5em;
-  transform: scale(0.9) translateY(-0.7em);
+  -webkit-transform: scale(0.9) translateY(-0.7em);
+          transform: scale(0.9) translateY(-0.7em);
 }
+
 #logo .bnmlogo {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   width: 5.5em;
   height: 6em;
-  transform: translateY(-0.2em);
+  -webkit-transform: translateY(-0.2em);
+          transform: translateY(-0.2em);
 }
+
 #logo .ncclogo {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   width: 4em;
 }
+
 #logo .text {
   height: 5em;
-  transform: translateX(1em);
+  -webkit-transform: translateX(1em);
+          transform: translateX(1em);
 }
+
 #logo .text .wordmark {
   font-weight: 900;
   font-size: 1.8rem;
-  transform: translateY(-1em);
+  -webkit-transform: translateY(-1em);
+          transform: translateY(-1em);
 }
+
 #logo .text .caption {
   font-weight: bold;
   font-size: 1.3rem;
-  transform: translateY(-4em);
+  -webkit-transform: translateY(-4em);
+          transform: translateY(-4em);
 }
 
 nav:after {
@@ -143,11 +168,11 @@ nav ul ul ul li {
 }
 
 li > a:after {
-  content: " ▼";
+  content: ' ▼';
 }
 
 li > a:only-child:after {
-  content: "";
+  content: '';
 }
 
 .homepage {
@@ -159,6 +184,7 @@ li > a:only-child:after {
   width: 100%;
   height: 100vh;
 }
+
 .homepage .hero {
   position: absolute;
   width: 65vw;
@@ -166,6 +192,7 @@ li > a:only-child:after {
   top: -10vw;
   z-index: 2;
 }
+
 .homepage .orange-background {
   position: relative;
   background-color: #FF5C00;
@@ -173,12 +200,18 @@ li > a:only-child:after {
   height: 100vh;
   width: 55%;
   left: 45%;
+  overflow: hidden;
 }
+
 .homepage .orange-background .hero-background {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
   position: relative;
   width: 250%;
   mix-blend-mode: soft-light;
 }
+
 .homepage .hero-text {
   position: absolute;
   top: 25%;
@@ -186,23 +219,32 @@ li > a:only-child:after {
   line-height: 1.5em;
   z-index: 5;
 }
+
 .homepage .hero-text h1 {
   font-weight: 900;
   font-size: 3.3vw;
   color: #1A0D76;
 }
+
 .homepage .hero-text h3 {
   font-weight: bold;
   font-size: 1.9vw;
 }
+
 .homepage .hero-text .join-cta {
   background-color: #1A0D76;
   width: 8em;
   height: 3em;
   border-radius: 8em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: bold;
   font-size: 1.7vw;
   color: white;
@@ -213,16 +255,20 @@ li > a:only-child:after {
   position: absolute;
   width: 100%;
   z-index: 2;
-  height: 200vh;
-  top: 35vw;
+  height: auto;
+  top: 26em;
+  overflow: hidden;
 }
+
 .aboutpage .ribbon {
+  overflow: hidden;
   z-index: 4;
   position: absolute;
   width: 100vw;
-  top: -10vw;
+  top: -8em;
   height: 100%;
 }
+
 .aboutpage .ribbon .red-vector {
   position: absolute;
   top: 10em;
@@ -232,6 +278,7 @@ li > a:only-child:after {
   -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
 }
+
 .aboutpage .ribbon .navyblue-vector {
   position: absolute;
   top: 12em;
@@ -241,6 +288,7 @@ li > a:only-child:after {
   -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
 }
+
 .aboutpage .ribbon .skyblue-vector {
   position: absolute;
   top: 14em;
@@ -250,6 +298,7 @@ li > a:only-child:after {
   -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
 }
+
 .aboutpage .about-main-content {
   z-index: 5;
   background-color: #518BBB;
@@ -257,10 +306,12 @@ li > a:only-child:after {
   top: 15em;
   height: 85vw;
 }
+
 .aboutpage .about-main-content .about-ncc {
   position: relative;
   top: 0em;
 }
+
 .aboutpage .about-main-content .about-ncc h1 {
   font-size: 3vw;
   color: white;
@@ -268,6 +319,7 @@ li > a:only-child:after {
   position: relative;
   left: 20vw;
 }
+
 .aboutpage .about-main-content .about-ncc h3 {
   position: relative;
   color: #1A0D76;
@@ -275,13 +327,16 @@ li > a:only-child:after {
   width: 65%;
   left: 21vw;
 }
+
 .aboutpage .about-main-content .about-bnmit-ncc {
   position: relative;
   top: 3em;
 }
+
 .aboutpage .about-main-content .about-bnmit-ncc img {
   width: 100%;
 }
+
 .aboutpage .about-main-content .about-bnmit-ncc h1 {
   font-size: 3vw;
   color: white;
@@ -289,6 +344,7 @@ li > a:only-child:after {
   position: relative;
   left: 15vw;
 }
+
 .aboutpage .about-main-content .about-bnmit-ncc h3 {
   position: relative;
   color: #1A0D76;
@@ -296,24 +352,32 @@ li > a:only-child:after {
   width: 65%;
   left: 16vw;
 }
+
 .aboutpage .about-main-content section {
   width: 100vw;
   overflow: hidden;
   position: relative;
-  top: 5%;
+  top: 4em;
   padding: 0;
 }
+
 .aboutpage .about-main-content section article {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 200%;
   -webkit-animation: bannermove 20s linear infinite;
           animation: bannermove 20s linear infinite;
   gap: 3em;
 }
+
 .aboutpage .about-main-content section div {
   width: 100%;
 }
+
 .aboutpage .about-main-content section ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background: none;
   list-style-type: none;
@@ -321,49 +385,175 @@ li > a:only-child:after {
   margin: 0;
   gap: 3em;
 }
+
 .aboutpage .about-main-content section li {
   width: 100%;
   background: blue;
 }
+
 .aboutpage .about-main-content section li:nth-child(2) {
   background: green;
 }
+
 .aboutpage .about-main-content section li:nth-child(3) {
   background: yellow;
 }
+
 .aboutpage .about-main-content section img {
   border: 0.7em solid #1A0D76;
   display: block;
   width: 100%;
 }
+
 @-webkit-keyframes bannermove {
   0% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
-  }
-}
-@keyframes bannermove {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
   }
 }
 
+@keyframes bannermove {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
+
+.aboutpage .about-main-content-2 {
+  position: relative;
+  top: 20em;
+  left: 5em;
+  width: 100%;
+  height: 120em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 30vw 30vw;
+      grid-template-columns: 30vw 30vw;
+  -ms-grid-rows: 20vw 30vw 50em;
+      grid-template-rows: 20vw 30vw 50em;
+  -webkit-column-gap: 10em;
+          column-gap: 10em;
+}
+
+.aboutpage .about-main-content-2 .content-container {
+  position: relative;
+  top: 0em;
+}
+
+.aboutpage .about-main-content-2 .content-container h1 {
+  font-size: 3vw;
+  color: #1A0D76;
+  font-weight: 800;
+  position: relative;
+}
+
+.aboutpage .about-main-content-2 .content-container h3 {
+  position: relative;
+  color: #1A0D76;
+  font-size: 2.2vw;
+}
+
+.aboutpage .about-main-content-2 .content-container:nth-child(4) {
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 4;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.aboutpage .about-main-content-2 .content-container:nth-child(3) {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.activitiespage {
+  position: relative;
+  z-index: 7;
+  top: 220em;
+  margin: 0;
+  left: 5em;
+}
+
+.activitiespage .heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 3em;
+}
+
+.activitiespage .heading h1 {
+  padding: 0;
+  font-size: 3vw;
+  font-weight: 800;
+  color: black;
+  white-space: nowrap;
+}
+
+.activitiespage .heading .line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  width: 80vw;
+  height: 1em;
+  background-color: #FF001E;
+}
+
+.activitiespage .card-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  gap: 3em;
+}
+
+.activitiespage .card-slider .card {
+  width: 30em;
+  height: 20em;
+  background-color: #E4E4E4;
+  border-radius: 2em;
+}
+
+.activitiespage .card-slider .card a {
+  text-decoration: none;
+  font-size: 2.3rem;
+  font-weight: bold;
+  position: relative;
+  left: 7.4em;
+  top: 7.1em;
+  color: black;
+}
+
 /* Media Queries
---------------------------------------------- */
+  --------------------------------------------- */
 @media all and (max-width: 915px) {
   #logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 0;
     width: 100%;
     text-align: left;
     float: none;
-    justify-content: left;
-    transform: scale(0.8) translateX(-3em);
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-transform: scale(0.8) translateX(-3em);
+            transform: scale(0.8) translateX(-3em);
   }
   nav a {
     font-size: 20px;
@@ -379,7 +569,7 @@ li > a:only-child:after {
     display: none;
   }
   .toggle + a,
-.menu {
+  .menu {
     display: none;
   }
   .toggle {
@@ -408,18 +598,18 @@ li > a:only-child:after {
     width: 100%;
   }
   nav ul ul .toggle,
-nav ul ul a {
+  nav ul ul a {
     padding: 0 40px;
   }
   nav ul ul ul a {
     padding: 0 80px;
   }
   nav a:hover,
-nav ul ul ul a {
+  nav ul ul ul a {
     background-color: #000000;
   }
   nav ul li ul li .toggle,
-nav ul ul a {
+  nav ul ul a {
     background-color: #1A0D76;
   }
   nav ul ul {
@@ -428,7 +618,7 @@ nav ul ul a {
     color: #ffffff;
   }
   nav ul ul li:hover > ul,
-nav ul li:hover > ul {
+  nav ul li:hover > ul {
     display: none;
   }
   nav ul ul li {
@@ -463,15 +653,149 @@ nav ul li:hover > ul {
     font-size: 1rem;
   }
   .aboutpage {
-    top: 85vw;
+    top: 37em;
   }
   .aboutpage .ribbon {
-    height: 20vw;
+    top: -10em;
+    width: 200%;
+  }
+  .aboutpage .about-main-content {
+    top: 8em;
+    height: 75%;
+  }
+  .aboutpage .about-main-content .about-ncc h1 {
+    font-size: 2.2em;
+  }
+  .aboutpage .about-main-content .about-ncc h3 {
+    font-size: 1.4em;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc {
+    left: -5%;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc h1 {
+    font-size: 2.2em;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc h3 {
+    font-size: 1.4em;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc img {
+    position: inherit;
+    left: -10%;
+    width: 140vw;
+  }
+  .aboutpage .about-main-content section {
+    top: 3em;
+    width: 200vw;
+  }
+  .aboutpage .about-main-content section article {
+    gap: 1em;
+  }
+  .aboutpage .about-main-content section article ul {
+    gap: 1em;
+  }
+  .aboutpage .about-main-content section article img {
+    border: 0.3em solid #1A0D76;
+  }
+  .aboutpage .about-main-content-2 {
+    top: 12em;
+    height: 100%;
+    left: 8%;
+    -ms-grid-columns: 90%;
+        grid-template-columns: 90%;
+    -ms-grid-rows: auto auto auto auto;
+        grid-template-rows: auto auto auto auto;
+    gap: 0;
+  }
+  .aboutpage .about-main-content-2 .content-container h1 {
+    font-size: 2em;
+  }
+  .aboutpage .about-main-content-2 .content-container h3 {
+    font-size: 1.2em;
+  }
+  .aboutpage .about-main-content-2 .content-container:nth-child(4) {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 4;
+        grid-row-start: 4;
+    grid-row-end: 5;
   }
 }
-@media all and (max-width: 330px) {
+
+@media all and (max-width: 420px) {
   nav ul li {
     display: block;
     width: 94%;
   }
-}/*# sourceMappingURL=style.css.map */
+  .aboutpage {
+    top: 33em;
+  }
+  .aboutpage .ribbon {
+    width: 280%;
+    top: -10em;
+  }
+  .aboutpage .about-main-content {
+    top: 10em;
+    height: auto;
+  }
+  .aboutpage .about-main-content .about-ncc h1 {
+    font-size: 2.2em;
+  }
+  .aboutpage .about-main-content .about-ncc h3 {
+    font-size: 1.4em;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc {
+    left: 0em;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc h1 {
+    font-size: 2.2em;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc h3 {
+    font-size: 1.4em;
+  }
+  .aboutpage .about-main-content .about-bnmit-ncc img {
+    position: inherit;
+    left: -5.5em;
+    width: 35em;
+  }
+  .aboutpage .about-main-content section {
+    top: 3em;
+    width: 290%;
+  }
+  .aboutpage .about-main-content section article {
+    gap: 1em;
+  }
+  .aboutpage .about-main-content section article ul {
+    gap: 1em;
+  }
+  .aboutpage .about-main-content section article img {
+    border: 0.3em solid #1A0D76;
+  }
+  .aboutpage .about-main-content-2 {
+    padding: 1em;
+    top: 13em;
+    height: 130em;
+    left: 1em;
+    -ms-grid-columns: 18em;
+        grid-template-columns: 18em;
+    -ms-grid-rows: 12em 17em 33em 33em;
+        grid-template-rows: 12em 17em 33em 33em;
+    gap: 0;
+  }
+  .aboutpage .about-main-content-2 .content-container h1 {
+    font-size: 2em;
+  }
+  .aboutpage .about-main-content-2 .content-container h3 {
+    text-justify: inter-word;
+    font-size: 1.2em;
+  }
+  .aboutpage .about-main-content-2 .content-container:nth-child(4) {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 4;
+        grid-row-start: 4;
+    grid-row-end: 5;
+  }
+}
+/*# sourceMappingURL=style.css.map */
